# badge_forge

./: Cargo.toml  Dockerfile  Makefile  README.md  fly.toml
docs/: README.md  badge_management.md  level_system.md  verification.md
src/: lib.rs  main.rs
src/api/: handler.rs  mod.rs  route.rs  state.rs
src/middleware/: auth.rs
src/model/: badge.rs  category.rs  level.rs  mod.rs  recipe.rs  top_recipe_request.rs  user.rs
src/queue/: mod.rs
src/service/: badge_processor.rs  db.rs  mod.rs  notifier.rs
src/utils/: badge.rs  level.rs  logging.rs  mod.rs
tests/: mod.rs
tests/api/: endpoints.rs
tests/queue/: mod.rs  queue_tests.rs
tests/service/: mod.rs  notifier_tests.rs
tests/utils/: badge_tests.rs  level_tests.rs  mod.rs  test_utils.rs
