[package]
name = "badge_forge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["__private", "macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
