[package]
name = "badge_forge"
version = "0.1.2"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["__private", "macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
mongodb = "3.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
